# voting-solana-moonzoon

./: README.md  questions.md
app/: .gitignore  Cargo.toml  MoonZoon.toml  Procfile  README.md
app/backend/: Cargo.toml
app/backend/src/: init_voting_state.rs  main.rs  solana_helpers.rs
app/frontend/: Cargo.toml
app/frontend/src/: add_party_page.rs  add_voter_page.rs  app.rs  connection.rs  home_page.rs  lib.rs  parties_page.rs  router.rs  solana_helpers.rs  theme.rs
app/frontend/src/add_party_page/: add_party_transaction.rs  view.rs
app/frontend/src/add_voter_page/: add_voter_transaction.rs  view.rs
app/frontend/src/app/: view.rs
app/frontend/src/home_page/: view.rs
app/frontend/src/parties_page/: view.rs  vote_transaction.rs
app/shared/: Cargo.toml
app/shared/src/: lib.rs
docs/: architecture.puml
docs/images/: MoonZoon_Solana.xcf  MoonZoon_Solana_big.xcf  pages.xcf
program/: .gitignore  Cargo.toml  README.md  config.yml
program/keypairs/: program-keypair.json  program-pubkey  system-program-keypair.json  system-program-pubkey  voter-keypair.json  voter-pubkey  voting-owner-keypair.json  voting-owner-pubkey
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/src/processor/: add_party.rs  add_voter.rs  exchange.rs  init_escrow.rs  init_voter_votes.rs  init_voting.rs  vote.rs
program/src/state/: escrow.rs  party.rs  voter_voted.rs  voter_votes.rs  voting_state.rs
