[package]
version = "0.1.0"
name = "backend"
repository = "https://github.com/MartinKavik/voting-solana-moonzoon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Voting example (Solana + MoonZoon)"
categories = ["MoonZoon", "Solana", "example"]
readme = "../README.md"
edition = "2018"

[dependencies]
moon = { git = "https://github.com/MartinKavik/MoonZoon", rev = "2a14743" }
shared = { path = "../shared", features = ["backend"] }
