[package]
version = "0.1.0"
name = "frontend"
repository = "https://github.com/MartinKavik/voting-solana-moonzoon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Voting example (Solana + MoonZoon)"
categories = ["MoonZoon", "Solana", "example"]
readme = "../README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
zoon = { git = "https://github.com/MartinKavik/MoonZoon", rev = "2a14743" }
shared = { path = "../shared", features = ["frontend"] }
rand = { version = "0.8.3", features = ["small_rng", "getrandom"], default-features = false }
getrandom = { version = "0.2", features = ["js"], default-features = false }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

