[package]
version = "0.1.0"
name = "shared"
repository = "https://github.com/MartinKavik/voting-solana-moonzoon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Voting example (Solana + MoonZoon)"
categories = ["MoonZoon", "Solana", "example"]
readme = "../README.md"
edition = "2018"

[dependencies]
# moonlight = { git = "https://github.com/MartinKavik/MoonZoon", rev = "2a14743" }
moonlight = { path = "../../../MoonZoon/crates/moonlight/" }

[features]
frontend = ["moonlight/frontend"]
backend = ["moonlight/backend"]
